cabal-version:      3.0
name:               binsym
version:            0.1.0.0
synopsis:
    A symbolic execution tool for RISC-V machine code based on the formal LibRISCV ISA model

license:            MIT
license-file:       LICENSE
author:             Sören Tempel
maintainer:         tempel@uni-bremen.de
copyright:          (c) 2023 University of Bremen
category:           Development
build-type:         Simple

common warnings
    ghc-options: -Wall

library
    import:           warnings
    hs-source-dirs:   src
    default-language: Haskell2010

    exposed-modules:  BinSym.Interpreter
                    , BinSym.ArchState
                    , BinSym.Util
                    , BinSym.Memory
                    , BinSym.Cond
                    , BinSym.Symbolic
                    , BinSym.Concolic
                    , BinSym.Tracer
                    , BinSym.Store
                    , BinSym.Syscall

    build-depends:    base    >=4.15.0.0
                    , random ^>=1.2.1.1
                    , z3
                    , libriscv
                    , freer-simple
                    , bytestring
                    , array
                    , containers
                    , bv

executable riscv-symex
    import:               warnings
    main-is:              Main.hs
    hs-source-dirs:       app
    default-language:     Haskell2010
    build-depends:
                      base >=4.15.0.0
                    , binsym
                    , libriscv
                    , optparse-applicative
                    , random
                    , freer-simple
                    , z3
                    , bv

test-suite test
    import:           warnings
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs

    other-modules:    Util
                    , Memory
                    , SymbolicExpr
                    , ConcolicExpr
                    , Tracer

    build-depends:
        base          >= 4.15.0.0
      , tasty        ^>= 1.4.2.3
      , tasty-hunit  ^>= 0.10.0.3
      , binsym
      , libriscv
      , z3
