cabal-version:      3.0
name:               formal-symex
version:            0.1.0.0
synopsis:
    A symbolic execution tool for RISC-V machine code based on the formal LibRISCV ISA model

license:            MIT
license-file:       LICENSE
author:             Sören Tempel
maintainer:         tempel@uni-bremen.de
copyright:          (c) 2023 University of Bremen
category:           Development
build-type:         Simple

common warnings
    ghc-options: -Wall

executable formal-symex
    import:           warnings
    main-is:          Main.hs
    hs-source-dirs:   src
    default-language: Haskell2010

    other-modules:    Util
                    , Interpreter

    build-depends:    base ^>=4.17.1.0
                    , what4 ^>=1.4
                    , parameterized-utils
                    , libriscv
                    , bv-sized
