cabal-version:      3.0
name:               formal-symex
version:            0.1.0.0
synopsis:
    A symbolic execution tool for RISC-V machine code based on the formal LibRISCV ISA model

license:            MIT
license-file:       LICENSE
author:             Sören Tempel
maintainer:         tempel@uni-bremen.de
copyright:          (c) 2023 University of Bremen
category:           Development
build-type:         Simple

common warnings
    ghc-options: -Wall

library
    import:           warnings
    hs-source-dirs:   src
    default-language: Haskell2010

    exposed-modules:  Interpreter
                    , Util
                    , Register

    build-depends:    base ^>=4.17.1.0
                    , z3
                    , libriscv
                    , bv-sized
                    , array
                    , freer-simple
                    , conversion

test-suite test
    import:           warnings
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base          >= 4.15.0.0
      , tasty        ^>= 1.4.2.3
      , tasty-hunit  ^>= 0.10.0.3
      , z3
      , formal-symex
